src/test/deca/context/invalid/class/58-ThisInMain.deca
/* Description:
      teste la régle (3.43) class doit être diffenrent de null

    Historique:
      cree le 22/01/2020
*/


class A {
    int a;
  }
{
  this.a; // erreur a ce niveau
}
